# agent-directory

./: .env.example  .gitignore  PROJECT_OVERVIEW.md  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  Rocket.toml  ai-plugin.json  openapi.json
backend/migrations/: 0001_initial.sql  0002_seed.sql  0003_fix_reputation_type.sql  0004_seed_listings.sql  0012_cleanup_test_data.sql  0016_remove_test_listings.sql  0017_add_business_categories.sql  0018_submitter_token.sql  0019_normalize_tags.sql
backend/src/: constants.rs  errors.rs  main.rs  slug.rs
backend/src/db/: mod.rs
backend/src/guards/: admin_token.rs  mod.rs  rate_limit.rs
backend/src/models/: category.rs  chain.rs  listing.rs  mod.rs  tag.rs
backend/src/routes/: categories.rs  chains.rs  listings.rs  mod.rs  tags.rs
backend/src/routes/admin/: listings.rs
frontend/: Dockerfile  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/public/: llms.txt  robots.txt
frontend/public/.well-known/: agent.json  ai-plugin.json
frontend/src/: App.tsx  index.css
frontend/src/components/: EmptyState.tsx  ErrorBoundary.tsx  ListingLogo.tsx  MarkdownRenderer.tsx  RadarLogo.tsx
frontend/src/components/admin/: AdminGuard.tsx  (+1 more)
frontend/src/hooks/: useListingsQuery.ts
frontend/src/lib/: adminStore.ts  api.ts  categoryColors.ts  constants.ts  theme.tsx
frontend/src/pages/: ApiDocsPage.tsx  BrowsePage.tsx  CheckStatusPage.tsx  HomePage.tsx  ListingDetailPage.tsx  NotFoundPage.tsx  SubmitPage.tsx
frontend/src/types/: api.ts
(+22 files in other folders)
