[package]
name = "agent-directory"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
slug = "0.1"
regex = "1"
governor = "0.6"
dashmap = "5"
dotenvy = "0.15"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
